refactor(backend): 后端重构为MVP版本
- 7表模型 + 种子数据，强枚举（Role/BusinessType/ScenicType/VillageType/CommentShow）
- 删除AI/ES/WebSocket/申请审批/定位等废弃模块
- 异常处理对齐 robot-singleton：BusinessException + GlobalExceptionHandler
- Service返回裸值抛异常，Controller统一Result.ok包装
- 拦截器合并为LoginInterceptor（含管理端role=4校验），路径从yml auth.*读取
- 接口仅GET/POST，补齐Swagger注解
- pom重命名为szxy-backend，Spring Boot 3.5.16